tests/negative/contexts/use_missing_context.orng
// use_missing_context.orng:8:15: error: missing context `My_Context`
//     My_Context
//              ^
// 
context My_Context = Int

fn main() -> Int {
    My_Context
}